# converto-api

./: Cargo.toml
src/: file_processing.rs  lib.rs  main.rs  server.rs  session.rs  utils.rs  websocket.rs  ws.rs
src/compress/: mod.rs  pdf.rs  websocket.rs
src/controller/: pdf.rs
src/db/: mongodb.rs
src/models/: mod.rs  pdf.rs
src/routes/: mod.rs  pdf.rs
src/utils/: mod.rs
