[package]
name = "converto-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.9.0"
actix-cors = "0.7.0"
actix-service = "2.0.2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15.0"
bson = "2.9.0"
serde_json = "1.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
mongodb = "2.8.2"
env_logger = "0.11.3"
actix-web-httpauth = "0.8.1"
once_cell = "1.19.0"
futures-util = "0.3.30"
actix-identity = "0.7.1"
actix-http = "3.6.0"
regex = "1.10.4"
actix-multipart = "0.6.2"
tempfile = "3.10.1"
pdfshrink = "0.2.0"
zip = "2.1.3"
